[gd_scene load_steps=8 format=3 uid="uid://ca8oagds2fn3p"]

[ext_resource type="Script" path="res://Prefabs/player.gd" id="1_hdf4t"]

[sub_resource type="Gradient" id="Gradient_usky8"]
offsets = PackedFloat32Array(0, 0.545455, 0.623377, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rlacp"]
gradient = SubResource("Gradient_usky8")
width = 16
height = 16
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_2dcrb"]
offsets = PackedFloat32Array(0, 0.272727, 0.694805)
colors = PackedColorArray(1, 1, 1, 1, 0.577922, 0.577922, 0.577922, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v448d"]
gradient = SubResource("Gradient_2dcrb")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_bgtyi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lp4m5"]
radius = 7.0

[node name="player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_hdf4t")

[node name="PlayerVisual" type="TextureRect" parent="."]
light_mask = 2
visibility_layer = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_rlacp")
stretch_mode = 2

[node name="LightOnLeft" type="PointLight2D" parent="."]
energy = 1.5
range_layer_min = 1
range_layer_max = 1
shadow_enabled = true
texture = SubResource("GradientTexture2D_v448d")

[node name="LightOnRight" type="PointLight2D" parent="."]
position = Vector2(1280, 0)
energy = 1.5
range_layer_min = 1
range_layer_max = 1
shadow_enabled = true
texture = SubResource("GradientTexture2D_v448d")
texture_scale = 5.0

[node name="DetectionArea" type="Area2D" parent="LightOnRight"]
collision_mask = 2
input_pickable = false

[node name="DetectionAreaSize" type="CollisionShape2D" parent="LightOnRight/DetectionArea"]
shape = SubResource("CircleShape2D_bgtyi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lp4m5")

[connection signal="body_entered" from="LightOnRight/DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="LightOnRight/DetectionArea" to="." method="_on_detection_area_body_exited"]
